Added word, spot, and grid function constructors * Also added a getMostRestrainedWord function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </label>
             
             <!--Table keeps the grid of characters.-->
-            <table></table>
+            <div id="grid">
+            </div>
             
         </section>
     </body>
