Grid loading * I also added grid copy() and changeLetter()

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <body>
         <section id="setup">
             <h2>Crossword Creation Set-up: </h2>
+            <label>Starting file: <input id="fileText" type="text" name="file"></label>
+            <button id="loadButton">Load File</button>
         </section>
         <section id="creationApp">
             <h2>Crossword Creation: </h2>
@@ -27,7 +29,7 @@
             </label>
             
             <!--Table keeps the grid of characters.-->
-            <div id="grid">
+            <div id="gridElement">
             </div>
             
         </section>
