Fixed(?) the word,spot, and grid constructors

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             
             <!--Table keeps the grid of characters.-->
             <div id="gridElement">
+                <p>Loading word lists. Please be patient.</p>
             </div>
             
         </section>
